--- a/index.html
+++ b/index.html
@@ -37,14 +37,12 @@
                 // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
                 // Can be downloaded from: https://github.com/captbaritone/webamp/raw/master/mp3/llama-2.91.mp3
                 url: "./llama-2.91.mp3"
-            }
-                {
-                    metaData: {
-                        artist: "Owl City",
-                            title: "Vanilla Twilight",
-                    },
-                        url: "./vanilla_twilight.m4a"
-            ],
+                metaData: {
+                    artist: "Owl City",
+                    title: "Vanilla Twilight",
+                },
+                url: "./vanilla_twilight.mp3"
+            }],
             // Optional. The default skin is included in the js bundle, and will be loaded by default.
             initialSkin: {
                 // NOTE: Your skin file must be served from the same domain as your HTML
