--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,7 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
+        04/29/2025: Added webamp! <br>
         12/29/2024: Removed shin splints thing, and "look to the right to see what I'm listening
         to". Made implementation poem collapsible. <br>
         December 18, 12024: Moved some stuff around, added TheTridentGuy and Status Cafe. <br>
