--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                     url: "https://archive.org/cors/winampskin_mac_os_x_1_5-aqua/mac_os_x_1_5-aqua.wsz",
                     name: "Mac OSX v1.5 (Aqua)",
                 },
+                {
+                    url: "./TopazAmp1-2.wsz",
+                    name: "Topaz Amp 1.2",
+                },
             ],
             // Optional.
             initialTracks: [
