Experiment with skin url, add a new song

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     name: "Mac OSX v1.5 (Aqua)",
                 },
                 {
-                    url: "./TopazAmp1-2.wsz",
+                    url: "https://github.com/Kirito139/stash/blob/b920fe3bfda0bf89142aa2637a98e38115e45a23/webamp_skins/TopazAmp1-2.wsz",
                     name: "Topaz Amp 1.2",
                 },
             ],
@@ -44,14 +44,14 @@
             initialTracks: [
               {
                 metaData: {
-                  artist: "DJ Mike Llama",
-                  title: "Llama Whippin' Intro",
+                  artist: "Mesh",
+                  title: "The Last One Standing",
                 },
                 // NOTE: Your audio file must be served from the same domain as your HTML
                 // file, or served with permissive CORS HTTP headers:
                 // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
                 // Can be downloaded from: https://github.com/captbaritone/webamp/raw/master/mp3/llama-2.91.mp3
-                url: "./llama-2.91.mp3"
+                url: "./mesh_the_last_one_standing.mp3"
               },
               {
                 metaData: {
@@ -67,7 +67,7 @@
                 // file, or served with permissive CORS HTTP headers:
                 // https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS
                 // Topaz can be downloaded from https://github.com/captbaritone/webamp/raw/master/skins/TopazAmp1-2.wsz
-                url: "https://github.com/Kirito139/stash/blob/b920fe3bfda0bf89142aa2637a98e38115e45a23/webamp_skins/Mac_OS_X_-_Aqua.wsz"
+                url: "https://kirito139.github.io/stash/webamp_skins/Mac_OS_X_-_Aqua.wsz"
             },
         });
         // Render after the skin has loaded.
