--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="index.js"></script>
     <script src="https://unpkg.com/webamp@1.4.0/built/webamp.bundle.min.js"></script>
-    <title>hoidbringer's noodle shop</title>
+    <title>lexm's noodle shop</title>
 </head>
 <body>
     <!-- You can use this URL, or download it and check it into your own project -->
@@ -79,7 +79,7 @@ href="https://webneko.net">Neko</a></h1>
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>hoidbringer</h1>
+                <h1>lexm</h1>
                 <p style = "font-size: 22px;">朱晓瑞</p>
                 <p style="font-family: var(--main-font);">Kirito139 ·
                 roguewielder</p>
