--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ href="https://webneko.net">Neko</a></h1>
                 GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP?
                 t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
                 </p>
-                <p>Welcome to my little corner of the internet. Enjoy your stay! (this site is a
-                major wip)</p>
+                <p>Welcome to my little corner of the internet. Enjoy your stay! (this site is
+                always under construction)</p>
                 <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club
                 Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF.
                    <br> - Languages I know: English/Python (preferred), <a style="text-decoration:
