--- a/changelog.html
+++ b/changelog.html
@@ -7,8 +7,9 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
-        04/29/2025: Added webamp! <br>
-        12/29/2024: Removed shin splints thing, and "look to the right to see what I'm listening
+        06/05/12025: added custom spacehey icon, horizontal rules.
+        04/29/12025: Added webamp! <br>
+        12/29/12024: Removed shin splints thing, and "look to the right to see what I'm listening
         to". Made implementation poem collapsible. <br>
         December 18, 12024: Moved some stuff around, added TheTridentGuy and Status Cafe. <br>
         [v0.1.11] - December 2, 12024: Added a proper web rating, may or may not have broken the
