--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="index.js"></script>
     <script src="https://unpkg.com/webamp@1.4.0/built/webamp.bundle.min.js"></script>
-    <title>lexm's noodle shop</title>
+    <title>lexm</title>
 </head>
 <body>
     <script>NekoType="black"</script>
@@ -21,9 +21,12 @@ href="https://webneko.net">Neko</a></h1>
                 <p style="font-family: var(--main-font);">Kirito139 ·
                 roguewielder</p>
                 <p style="font-family: var(--main-font);">San Francisco, CA</p>
-                <a href="mailto:lmulder@duck.com" style="align-self: center;
-                    text-decoration: none; color: inherit;"><img alt="Email"
-                    src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png"></a>
+                <a href="mailto:lmulder@duck.com" style="align-self: center; text-decoration: none; color: inherit;">
+                    <img alt="Email" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/mail.png">
+                </a>
+                <a href="https://spacehey.com/profile?id=3603438" style="align-self: center; text-decoration: none; color: inherit;">
+                    <img alt="SpaceHey" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/spachey.png">
+                </a>
             </header>
             <main>
                 <p style="text-align: center;">
@@ -31,10 +34,11 @@ href="https://webneko.net">Neko</a></h1>
                 GU d- s:- a?(---) C++ U+>++++ P L>+ E--- W+++ N o? K w--- O? M++ V? PS++ PE- Y+ PGP?
                 t 5 X?>+ R>+ tv+ b+>+++ DI(+) D+ G e- h! !r y
                 </p>
+                <hr>
                 <p>Welcome to my little corner of the internet. Enjoy your stay! (this site is
                 always under construction)</p>
                 <p> Quick facts: <br> - Affiliations: Lowell HS Class of '27, Hack Club, Flight Club
-                Aerospace, Lowell Theater Tech. <br> - Sports: XC/TF.
+                Aerospace, Lowell Theater Tech. <br> - Sports: Lowell XC/TF, SF Composite XC MTB.
                    <br> - Languages I know: English/Python (preferred), <a style="text-decoration:
                                                                                   none; font-family:
                                                                                   'Zpix'; font-size:
@@ -120,9 +124,12 @@ href="https://webneko.net">Neko</a></h1>
                     // Render after the skin has loaded.
                     webamp.renderWhenReady(document.getElementById('winamp-container'));
                 </script>
+                <hr>
                 <!-- wakatime languages pie chart -->
                 <a href="https://wakatime.com"><img
                     src="https://wakatime.com/share/@Kirito139/55e761bc-0cc6-4124-8e2c-921a564ff9f5.png"/></a>
+                <hr>
+                <p>Poetry—click each one to expand it:</p>
                 <div class="implementation-container">
                     <input type="checkbox" id="implementation-toggle" class="implementation-toggle">
                     <label for="implementation-toggle" align="center">
@@ -179,6 +186,40 @@ the clients last changes were even included.
 And the client exclaimed with a snarl and a taunt
 'IT'S JUST WHAT I ASKED FOR---BUT NOT WHAT I WANT!'
                 </pre>
+                </div>
+                <div class="emotion-container">
+                    <input type="checkbox" id="emotion-toggle" class="emotion-toggle">
+                    <label for="emotion-toggle" align="center">
+                        Once.
+                    </label>
+                <pre class="emotion-content">
+author: lexm (me!)
+
+Happiness
+I had it once
+Warm and plenty
+Just like the blood
+Still wet on my hands
+
+Laughter
+I heard it once
+Ringing out
+Like a bell
+The one at your funeral
+
+Joy
+I felt it once
+It danced and spun
+And never faltered
+Like my murdering hand
+
+Life
+You had it once
+I don’t deserve it
+I was a coward
+And took yours to keep mine
+For what it’s worth
+I’m sorry
             </main>
         </div>
         <div class="sidebar">
@@ -224,17 +265,34 @@ And the client exclaimed with a snarl and a taunt
             <iframe width="180" height="180" style="border:none"
                 src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
             <p> Some cool games:<br>
-            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/survev.ico"><a href="https://survev.io/" style="color: inherit !important;">survev.io</a><br>
-            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/nbwJLZ.png"><a href="https://sevencrane.itch.io/vapor-trails" style="color: inherit
-                !important;">Vapor Trails</a><br>
-            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/warbrokers.ico"><a href="https://warbrokers.io" style="color: inherit !important;">War Brokers</a><br>
-            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/ev-io.png"><a href="https://ev.io" style="color: inherit !important;">ev.io</a><br>
-            - <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/endless-sky.ico"><a href="https://endless-sky.github.io" style="color: inherit !important;">Endless
-                Sky</a><br>
-            - <a href="https://hypersomnia.xyz/" style="color: inherit
-                !important;">Hypersomnia</a></p>
 
+            <!-- Survev.io -->
+            <a href="https://survev.io/" style="color: inherit !important;">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/survev.ico">
+            </a><br>
+
+            <!-- Vapor Trails -->
+            <a href="https://sevencrane.itch.io/vapor-trails" style="color: inherit !important;">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/nbwJLZ.png" alt="Vapor Trails">
+            </a><br>
+            
+            <!-- WarBrokers -->
+            <a href="https://warbrokers.io" style="color: inherit !important;">
+                <img alt="WarBrokers" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/warbrokers.ico">
+            </a><br>
+
+            <!-- ev.io -->
+            <a href="https://ev.io" style="color: inherit !important;">ev.io</a><br>
+
+            <!-- Endless Sky -->
+            <a href="https://endless-sky.github.io" style="color: inherit !important;">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/endless-sky.png">
+            </a><br>
+
+            <!-- Hypersomnia -->
+            <a href="https://hypersomnia.xyz/" style="color: inherit !important;">Hypersomnia</a></p>
         </div>
+
     </div>
     <footer>
         <p>Webrings!</p>
@@ -557,6 +615,9 @@ And the client exclaimed with a snarl and a taunt
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/xkcd.png"
                 alt="xkcd">
             </a>
+
+            <!-- Status Cafe -->
+            <a href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
 
         </div>
         <p>This site was wrought from raw html, css, and javascript with the
