--- a/index.html
+++ b/index.html
@@ -11,8 +11,37 @@
 </head>
 <body>
     <script>NekoType="black"</script>
-    <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a 
-href="https://webneko.net">Neko</a></h1>
+    <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a></h1>
+    <!-- (c) Layout created by fini hoover :3 (https://layouts.spacehey.com/layout?id=30834) -->
+
+    <div class="snowflakes">
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_mrgreen.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_eek.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_redface.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_rolleyes.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_wink.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_razz.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_lol.gif"/>
+        </div>
+        <div class="snowflake">
+            <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/smilies/phpBB2/icon_cry.gif"/>
+        </div>
+    </div>
+
+
     <div class="container">
         <div class="main-content">
             <header>
@@ -241,7 +270,8 @@ I’m sorry
                 src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif"
                 alt="The current mood of kirito139 at www.imood.com" border="0"></a>
             <br>
-            Sign my <a href="https://kirito139.atabook.org" style="color: inherit;">guestbook!</a>
+            Sign my guestbook:<a href="https://kirito139.atabook.org" style="color: inherit;"><img
+                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/guestbook.png"></a>
             </p>
             <iframe src="https://incr.easrng.net/badge?key=lexm" style="background:
                 url(//incr.easrng.net/bg.gif)" title="increment badge" width="88" height="31"
@@ -618,6 +648,11 @@ I’m sorry
 
             <!-- Status Cafe -->
             <a href="https://status.cafe"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"/></a>
+
+            <!-- yoursmiles.org -->
+            <a href="https://yoursmiles.org/">
+                <img src="https://yoursmiles.org/img/sbutton.gif" alt="Your personal smileys" border="0" width="88" height="31">
+            </a>
 
         </div>
         <p>This site was wrought from raw html, css, and javascript with the
