--- a/changelog.html
+++ b/changelog.html
@@ -7,7 +7,7 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
-        06/06/12025: emoticon rain, guestbook icon, new 88x31 button. <br>
+        06/06/12025: emoticon rain, guestbook icon, new 88x31 button, retronaut webring. <br>
         06/05/12025: added custom spacehey icon, horizontal rules. <br>
         04/29/12025: Added webamp! <br>
         12/29/12024: Removed shin splints thing, and "look to the right to see what I'm listening
