--- a/index.html
+++ b/index.html
@@ -348,6 +348,10 @@ I’m sorry
             </p>
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The
            Geekring">
+           <br>
+           <a href='https://webring.dinhe.net/prev/https://kirito139.github.io'>‹</a>
+           <a href='https://webring.dinhe.net/'>The Retronaut Webring</a>
+           <a href='https://webring.dinhe.net/next/https://kirito139.github.io'>›</a>
         </div>
         <p> Cool sites!</p>
         <div id="cool-sites" style="text-decoration: none;">
