--- a/index.html
+++ b/index.html
@@ -349,9 +349,11 @@ I’m sorry
            <img usemap="#badge-geekring" src="http://geekring.net/banner/geek_2.gif" alt="The
            Geekring">
            <br>
-           <a href='https://webring.dinhe.net/prev/https://kirito139.github.io'>‹</a>
-           <a href='https://webring.dinhe.net/'>The Retronaut Webring</a>
-           <a href='https://webring.dinhe.net/next/https://kirito139.github.io'>›</a>
+           <a href="https://webring.dinhe.net/">The Retronaut Webring</a>
+           <br>
+           <a href="https://webring.dinhe.net/prev/https://kirito139.github.io">‹‹</a>
+           <a href="https://webring.dinhe.net/random">Random</a>
+           <a href="https://webring.dinhe.net/next/https://kirito139.github.io">››</a>
         </div>
         <p> Cool sites!</p>
         <div id="cool-sites" style="text-decoration: none;">
