some minor updates

--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,7 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
+        06/13/12025: fix kirsvanta button, add new song, add mastodon link. <br>
         06/06/12025: emoticon rain, guestbook icon, new 88x31 button, retronaut webring. <br>
         06/05/12025: added custom spacehey icon, horizontal rules. <br>
         04/29/12025: Added webamp! <br>
