--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <script>NekoType="black"</script>
     <h1 id=nl><script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a></h1>
+
     <!-- (c) Layout created by fini hoover :3 (https://layouts.spacehey.com/layout?id=30834) -->
 
     <div class="snowflakes">
@@ -56,6 +57,7 @@
                 <a href="https://spacehey.com/profile?id=3603438" style="align-self: center; text-decoration: none; color: inherit;">
                     <img alt="SpaceHey" src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/spachey.png">
                 </a>
+                <a rel="me" href="https://mastodon.social/@lexm">Mastodon</a>
             </header>
             <main>
                 <p style="text-align: center;">
@@ -139,7 +141,14 @@
                                     title: "Preparation for Meltdown",
                                 },
                                 url: "./preparation+for+meltdown_the+pineapple+thief.mp3"
-                            }
+                            },
+                            {
+                                metaData: {
+                                    artist: "F4",
+                                    title: "流星雨",
+                                },
+                                url: "./F4_流星雨.mp3"
+                            },
                         ],
                         // Optional. The default skin is included in the js bundle, and will be loaded by default.
                         initialSkin: {
@@ -249,6 +258,8 @@ I was a coward
 And took yours to keep mine
 For what it’s worth
 I’m sorry
+                </pre>
+                </div>
             </main>
         </div>
         <div class="sidebar">
@@ -357,22 +368,28 @@ I’m sorry
         </div>
         <p> Cool sites!</p>
         <div id="cool-sites" style="text-decoration: none;">
+            <!-- TheTridentGuy -->
             <p><a href="http://thetridentguy.xyz/" style="color: inherit">TheTridentGuy</a></p>
+            <!-- Tertiary Apocalypse -->
             <a href="https://tertiaryapocalypse.neocities.org" style="text-decoration: none;">
-                <img
-                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png"
-                alt="tertiaryapocalypse site button">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png" alt="tertiaryapocalypse site button">
             </a>
-            <a href="https://velvetblue.neocities.org"><img
-                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/velvet_blue.png"
-                alt="Velvet Blue"></a>
-            <a href="https://nano.lgbt/"><img
-                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png"
-                style="text-decoration: none;"></a>
-            <a href="https://kirsvantas.com" target="_blank"><img src="/local/path/to/button.gif"
-                alt="https://kirsvantas.com"></a>
+            <!-- Velvet Blue -->
+            <a href="https://velvetblue.neocities.org">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/velvet_blue.png" alt="Velvet Blue">
+            </a>
+            <!-- nanopone -->
+            <a href="https://nano.lgbt/">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/nano.png" style="text-decoration: none;">
+            </a>
+            <!-- KirsVantas -->
+            <a href="https://web.archive.org/web/20250326182221/https://kirsvantas.com/" target="_blank">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/kirsvantas.gif" alt="https://kirsvantas.com">
+            </a>
+            <!-- Dimden -->
             <a href="https://dimden.dev/"><img
                 src="https://dimden.dev/services/images/88x31.gif"></a> <p>
+            <!-- Leia uwu -->
             <a href="https://web.archive.org/web/20241003071517/https://leia.pages.gay/"
                 style="color: inherit;">leia_uwu's homepage (archive link, she
             took the site down :( )</a>
