update guestbook link

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ I’m sorry
                 src="https://moods.imood.com/display/uname-kirito139/fg-FFCC02/bg-282828/trans-1/imood.gif"
                 alt="The current mood of kirito139 at www.imood.com" border="0"></a>
             <br>
-            Sign my guestbook:<a href="https://kirito139.atabook.org" style="color: inherit;"><img
+            Sign my guestbook:<a href="https://lexm.atabook.org" style="color: inherit;"><img
                 src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/icons/guestbook.png"></a>
             </p>
             <iframe src="https://incr.easrng.net/badge?key=lexm" style="background:
