just some minor stuff

--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
                 </script>
                 <hr>
                 <!-- wakatime languages pie chart -->
-                <a href="https://wakatime.com"><img
-                    src="https://wakatime.com/share/@Kirito139/55e761bc-0cc6-4124-8e2c-921a564ff9f5.png"/></a>
+                <figure>
+                    <embed src="https://wakatime.com/share/@Kirito139/41ef517e-b132-44c5-aee3-12f8c6e459dc.svg">
+                    </embed>
+                </figure>
                 <hr>
                 <p>Poetry—click each one to expand it:</p>
                 <div class="implementation-container">
@@ -575,16 +577,13 @@ I’m sorry
             alt="Made with Macintosh">
 
             <!-- 88x31 -->
-            <img
-            src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/88x31.png"
-            alt="88x31">
+            <a title="88x31" referrerpolicy="no-referrer" href="https://88x31.neocities.org" style="text-decoration: none;">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/88x31.png" alt="88x31">
+            </a>
 
             <!-- chrome is evil -->
-            <a title="Anything but chrome" referrerpolicy="no-referrer"
-                href="https://contrachrome.com/" style="text-decoration: none;">
-                <img
-                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome2.gif"
-                alt="Google Chrome is EVIL!">
+            <a title="Anything but chrome" referrerpolicy="no-referrer" href="https://contrachrome.com/" style="text-decoration: none;">
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/chrome2.gif" alt="Google Chrome is EVIL!">
             </a>
 
             <!-- get a computer now -->
