--- a/index.html
+++ b/index.html
@@ -372,6 +372,10 @@ I’m sorry
         <div id="cool-sites" style="text-decoration: none;">
             <!-- TheTridentGuy -->
             <p><a href="http://thetridentguy.xyz/" style="color: inherit">TheTridentGuy</a></p>
+            <!-- astracelestine -->
+            <a href="https://astracelestine.nekoweb.org">
+                <img src="https://astracelestine.nekoweb.org/img/siteWidget.png" style="width: 80px">
+            </a>
             <!-- Tertiary Apocalypse -->
             <a href="https://tertiaryapocalypse.neocities.org" style="text-decoration: none;">
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png" alt="tertiaryapocalypse site button">
