--- a/index.html
+++ b/index.html
@@ -681,9 +681,13 @@ I’m sorry
             </a>
 
         </div>
+            Visits since 2025-07-09 at 16:10: <a href="https://smallcounter.com"><img
+                src="https://smallcounter.com/count.php?c_style=88&id=1752102264" border=0 alt="web
+                counter"></a>
         <p>This site was wrought from raw html, css, and javascript with the
         help of <a href="https://perplexity.com" style="color:
-        inherit;">Perplexity</a> and a large dose of procrastination.</p>
+        inherit;">Perplexity</a> and a large dose of procrastination. Kindly hosted for free by
+    ![leprd](https://leprd.space)</p>
         <p>·</p>
         <p><a href="changelog.html" style="color: inherit;">Changelog</a>
         </p>
